--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
