--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.27.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "uniqid": "^5.4.0"
