--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.27.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "mongoose": "^6.3.1",
     "uniqid": "^5.4.0"
   }
 }
