--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   },
   "dependencies": {
     "axios": "^0.27.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "uniqid": "^5.4.0"
   }
 }
