--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node index.js",
     "test": "newman run ./tests/movies_collection.json -e ./tests/movies_environment.json --reporters htmlextra,cli --reporter-htmlextra-export ./tests/reports/report.html"
   },
   "author": "WIT-Vibin-2021",
@@ -30,11 +28,14 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-logging": "^1.1.1",
+    "express-winston": "^4.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "winston": "^3.7.2"
   }
 }
